# image-dataset-inspector

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: generate_demo_images.py  run_public_sample.py
examples/public_sample/: README.md
src/image_dataset_inspector/: __init__.py  cli.py  inspector.py  metrics.py  reporting.py
tests/: conftest.py  test_cli.py  test_inspector.py  test_metrics.py
