[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "image-dataset-inspector"
version = "0.1.0"
description = "A small CLI for inspecting JPEG and PNG datasets with OpenCV."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "numpy>=1.23",
    "opencv-python-headless>=4.8",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
image-dataset-inspector = "image_dataset_inspector.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
